k3s-cluster/kube-apps/manifests/homepage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
  labels:
    name: homepage
