k3s-cluster/kube-apps/manifests/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
  labels:
    app: homepage
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
  selector:
    app: homepage
